--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                     <label for="message">Message</label>
                     <textarea id="message"></textarea>
                 </div>
+                <input type="submit" class="button" id="envoyer" value="Send Message ">
+
             </div>
-            <input type="submit" class="button" value="Send Message">
 
         </form>
     </section>
@@ -74,26 +75,26 @@
         <ul>
 
             <li>
-                <a href="#">
-                    <i class="fab fa-twitter"></i></a>
+                <a href="# ">
+                    <i class="fab fa-twitter "></i></a>
             </li>
             <li>
-                <a href="#">
-                    <i class="fab fa-facebook-f"></i></a>
+                <a href="# ">
+                    <i class="fab fa-facebook-f "></i></a>
 
 
             </li>
             <li>
-                <a href="#">
-                    <i class="fab fa-instagram"></i></a>
+                <a href="# ">
+                    <i class="fab fa-instagram "></i></a>
             </li>
             <li>
-                <a href="#">
-                    <i class="fab fa-linkedin-in"></i></a>
+                <a href="# ">
+                    <i class="fab fa-linkedin-in "></i></a>
             </li>
             <li>
-                <a href="#">
-                    <i class="far fa-envelope"></i></a>
+                <a href="# ">
+                    <i class="far fa-envelope "></i></a>
             </li>
         </ul>
     </footer>
